# zssh

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.webview2/EBWebView/: Local State  RevisitationBloomfilter
src-tauri/.webview2/EBWebView/Default/: BrowsingTopicsState  DIPS  ExtensionActivityEdge  Favicons  History  InterestGroups  Network Action Predictor  Preferences  PrivateAggregation  Secure Preferences  Top Sites  Web Data
src-tauri/.webview2/EBWebView/Default/DawnGraphiteCache/: data_1  index
src-tauri/.webview2/EBWebView/Default/DawnWebGPUCache/: data_1  index
src-tauri/.webview2/EBWebView/Default/Extension Rules/: LOG  LOG.old
src-tauri/.webview2/EBWebView/Default/Extension Scripts/: LOG  LOG.old
src-tauri/.webview2/EBWebView/Default/Extension State/: LOG  LOG.old
src-tauri/.webview2/EBWebView/Default/GPUCache/: data_0  data_1  data_2  index
src-tauri/.webview2/EBWebView/Default/Session Storage/: LOG  LOG.old
src-tauri/.webview2/EBWebView/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_00000a  f_00000b  index
src-tauri/.webview2/EBWebView/GraphiteDawnCache/: data_1  index
src-tauri/.webview2/EBWebView/ShaderCache/: data_1  index
src-tauri/.webview2/EBWebView/component_crx_cache/: metadata.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  dpapi.rs  lib.rs  log.rs  main.rs  pty.rs  sftp.rs  ssh.rs  state.rs  store.rs
(+1395 files in other folders)
